tests/snapshots/cli__unalias_config_after.snap
---
source: tests/cli.rs
expression: sandbox.config_contents()
---
{
  "aliases": {},
  "projects": {
    "vitest": {
      "tdd": "echo vitest-tdd"
    }
  }
}
